@@ -19,7 +19,8 @@ tf_state_dynamodb_table: 'terraform-lock'
 tf_state_region: 'eu-west-1'
 # Role for accessing state resources
 tf_state_role_arn: 'arn:aws:iam::SHARED_SERVICES_ACCOUNT_ID:role/TerraformStateRole'
-
+tf_required_version: '>= 0.12.0'
+aws_provider_version: '>= 2.14'
 # Role used by tfctl to retrieve data from AWS Organizations
 # Has to be set up in the primary org account
 tfctl_role_arn: 'arn:aws:iam::PRIMARY_ACCOUNT_ID:role/TfctlRole'
@@ -61,7 +62,7 @@ organization_units:
 # Configuration to apply to individual accounts
 account_overrides:
   test-example1:
-    # Override the bucket name in specific account
+    # Override the bucket name in a specific account
     example_bucket_name: 'tfctl-account-override-example'
 
 
