@@ -8,7 +8,7 @@ tf_state_dynamodb_table: 'terraform-lock'
 tf_state_region: 'eu-west-1'
 tf_pipeline_bucket: 'terraform-pipeline'
 tf_required_version: '>= 0.12.0'
-aws_provider_version: '~> 2.14'
+aws_provider_version: '>= 2.14'
 tfctl_role_arn: 'arn:aws:iam::0123456789:role/TfCtlUser'
 
 # Organization config
